logo changed, aligned of nav bar improved

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -16,10 +16,11 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 fixed-top">
-            <div class="container">
+            <div class="container-fluid nav-bar-container">
                 <!-- Brand -->
-                <a class="navbar-brand" href="/">
-                    <img src="/assets/images/mojo_logo2.png" alt="Logo" height="70">
+                <a class="navbar-brand d-flex align-items-center" href="/">
+                    <img src="/assets/images/mojo_nobg.png" alt="Logo" class="img-fluid"
+                        style="height: 40px; transform: scale(5.0); transform-origin: center;">
                 </a>
 
                 <!-- Toggler -->
