--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -276,3 +276,8 @@ select {
         width: 100%;
     }
 }
+
+.nav-bar-container {
+    padding-left: 9% !important;
+    padding-right: 5% !important;
+}
