minor changes, layout improvements

--- a/src/about.njk
+++ b/src/about.njk
@@ -42,7 +42,7 @@
                     </h4>
                     <p class="name-paragraph">
                         As President of Mojo CFO, Joe leads a team of Fractional CFOs to support
-                        values-oriented CEOs and owners in America’s backbone businesses.
+                        value-oriented CEOs and owners in America’s backbone businesses.
                         <br><br>
                         Raised in a rural town in Western Maryland on a hundred-plus acre Black
                         Angus
@@ -132,9 +132,7 @@
                     </ul>
                 </div>
             </div>
-            <!-- Right column: placeholder for image/background -->
             <div class="col-md-6 col-lg-5">
-                <!-- Insert background image or graphic here -->
             </div>
         </div>
     </div>
@@ -153,7 +151,7 @@
             business’ goals. Whether you are looking for financial insights, cash flow management, or growth financing,
             our team is here to help.
         </p>
-        <a href="https://forms.gle/HW7q5Bn8mr4QP6s3A" target="_blank" class="btn btn-primary btn-lg cta-btn">
+        <a href="" target="_blank" class="btn btn-primary btn-lg cta-btn">
             Let's Have a Conversation
             <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
                 class="ps-2">
