--- a/src/index.njk
+++ b/src/index.njk
@@ -110,7 +110,7 @@
                     integrating expert analysis with user-friendly reporting tools, we enable your
                     leadership to make confident, data-driven decisions.
                 </p>
-                <a href="/" class="btn btn-dark biz-btn">
+                <a href="/contact" class="btn btn-dark biz-btn">
                     Learn more
                 </a>
             </div>
@@ -209,7 +209,7 @@
             Schedule a meeting with our Team to discuss how Mojo CFO can support your business’ financial
             growth and stability.
         </p>
-        <a href="https://forms.gle/HW7q5Bn8mr4QP6s3A" target="_blank" class="btn btn-primary btn-lg cta-btn">
+        <a href="/contact" target="_blank" class="btn btn-primary btn-lg cta-btn">
             Let's Have a Conversation
             <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
                 class="ps-2">
