--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -30,9 +30,8 @@
                 </button>
 
                 <!-- Collapsible content -->
-                <div class="collapse navbar-collapse" id="mainNav">
-                    <!-- Centered links on desktop; stacked on mobile -->
-                    <ul class="navbar-nav mx-lg-auto align-items-lg-center gap-lg-2">
+                <div class="collapse navbar-collapse justify-content-center" id="mainNav">
+                    <ul class="navbar-nav align-items-lg-center gap-lg-2">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/pricing">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="/about">About Us</a></li>
@@ -48,7 +47,6 @@
                     </ul>
                 </div>
 
-                <!-- Desktop CTA (right-aligned) -->
                 <a class="btn conversation-btn d-none d-lg-inline-flex ms-lg-3" href="/contact">
                     Let’s Have a Conversation
                 </a>
