--- a/src/faq.njk
+++ b/src/faq.njk
@@ -10,7 +10,7 @@
     <!-- Hero card content -->
     <div class="hero-card">
         <h1 class="display-5 fw-bold mb-1">
-            FAQs<br>
+            FAQ's<br>
         </h1>
 
         <p class="fs-5 text-light mb-3">
@@ -32,7 +32,6 @@
         <h2 class="mb-4 faq-heading text-center">Frequently Asked Questions</h2>
         <div class="accordion" id="faqAccordion">
 
-            <!-- FAQ Item 1 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -53,7 +52,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 2 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -88,7 +86,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 3 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -108,7 +105,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 4 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -134,7 +130,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 5 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingFive">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -178,7 +173,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 6 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingSix">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -196,7 +190,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 7 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingSeven">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -212,7 +205,7 @@
                         <ul>
                             <li><strong>Essential:</strong> A minimum of one consultation call per month to discuss
                                 financial performance and address client concerns plus responses to ad-hoc financial
-                                questions via email within 48 hoursmaximum.</li>
+                                questions via email within 48 hours maximum.</li>
                             <li><strong>Pro:</strong>
                                 A minimum of two consultation calls per month to review performance and strategic
                                 initiatives plus priority email and phone support with responses within 24 hours
@@ -229,7 +222,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 8 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingEight">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -240,7 +232,7 @@
                 <div id="faqCollapseEight" class="accordion-collapse collapse" aria-labelledby="faqHeadingEight"
                     data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
-                        Absolutely. We regularly assist with:
+                        Absolutely. Weregularlyassistour clientswith:
                         <ul>
                             <li>Creating robust financial models and projections for
                                 investors or lenders.</li>
@@ -253,7 +245,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 9 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingNine">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -277,7 +268,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 10 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingTen">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -295,7 +285,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 11 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingEleven">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -314,7 +303,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 12 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingTwelve">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -332,7 +320,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 13 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingThirteen">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -350,7 +337,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 14 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingFourteen">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -369,7 +355,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 15 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingFifteen">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -396,7 +381,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 16 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingSixteen">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -420,7 +404,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 17 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingSeventeen">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -439,7 +422,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 18 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingEighteen">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -457,7 +439,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 19 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingNineteen">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -481,7 +462,6 @@
                 </div>
             </div>
 
-            <!-- FAQ Item 20 -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="faqHeadingTwenty">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
