google form links updated, updated profile photo

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -40,14 +40,15 @@
 
                         <!-- Mobile CTA (full width inside collapse) -->
                         <li class="nav-item d-lg-none mt-2">
-                            <a class="btn conversation-btn w-100" href="/contact">
+                            <a class="btn conversation-btn w-100" href="https://forms.gle/qASLJYMZ4VmgzvQUA">
                                 Let’s Have a Conversation
                             </a>
                         </li>
                     </ul>
                 </div>
 
-                <a class="btn conversation-btn d-none d-lg-inline-flex ms-lg-3" href="/contact">
+                <a class="btn conversation-btn d-none d-lg-inline-flex ms-lg-3"
+                    href="https://forms.gle/qASLJYMZ4VmgzvQUA">
                     Let’s Have a Conversation
                 </a>
             </div>
