--- a/src/about.njk
+++ b/src/about.njk
@@ -18,7 +18,8 @@
             help.
         </p>
 
-        <a href="#" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-75" style="font-size:1.25rem;">
+        <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-75"
+            style="font-size:1.25rem;">
             BOOK A CALL NOW TO LEARN MORE
             <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
                 class="ps-2" alt=">">
@@ -37,10 +38,10 @@
             <div class="row">
                 <div class="col-md-6 text-start order-2 order-md-1">
                     <h3 class="name-title">The Leader Behind Mojo CFO</h3>
-                    <h4 class="name-position">
+                    <h4 class="name-position pt-3">
                         The Visionary Behind Our Organization
                     </h4>
-                    <p class="name-paragraph">
+                    <p class="name-paragraph pt-3">
                         As President of Mojo CFO, Joe leads a team of Fractional CFOs to support
                         value-oriented CEOs and owners in America’s backbone businesses.
                         <br><br>
@@ -57,7 +58,7 @@
                 </div>
 
                 <div class="col-md-6 text-center mb-4 mb-md-0 img-div order-1 order-md-2">
-                    <img src="/assets/images/joeseph_profile.jpg" alt="Joseph Melville" class="w-100 h-100 scaled-img">
+                    <img src="/assets/images/profile2.png" alt="Joseph Melville" class="w-100 h-90 scaled-img">
                 </div>
             </div>
 
@@ -103,7 +104,7 @@
                 <h2 class="display-5 text-white mb-3 pt-5">THE HEART BEHIND<br>OUR WORK</h2>
                 <div class="services-card p-4"
                     style="background-color: rgba(0, 0, 0, 0.6); border: 1px solid #0dcaf0; border-radius: 1rem; max-width: 100%;">
-                    <p class="text-white mb-4 fw-bold ps-2">We operate using the following values:</p>
+                    <p class="text-white mb-4 ps-2">We operate using the following values:</p>
                     <ul class="list-unstyled mb-0 ps-2">
                         <li class="d-flex align-items-center text-white py-2 border-bottom border-secondary">
                             <i class="bi bi-bar-chart-line fs-3 text-info me-3"></i>
@@ -151,7 +152,7 @@
             business’ goals. Whether you are looking for financial insights, cash flow management, or growth financing,
             our team is here to help.
         </p>
-        <a href="" target="_blank" class="btn btn-primary btn-lg cta-btn">
+        <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" target="_blank" class="btn btn-primary btn-lg cta-btn">
             Let's Have a Conversation
             <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
                 class="ps-2">
