--- a/src/contact.njk
+++ b/src/contact.njk
@@ -41,7 +41,8 @@
                 <p class="mb-4">
                     For immediate inquiries, feel free to reach out via email at <strong>info@mojocfo.com</strong>.
                 </p>
-                <a href="/contact" class="learn-more text-decoration-none fw-bold">Learn More</a>
+                <a href="https://forms.gle/3W1Bu7fW2nFWr1UJA" class="learn-more text-decoration-none fw-bold">Learn
+                    More</a>
             </div>
             <div class="col-md-6 order-1 order-md-2 position-relative mb-4 mb-md-0">
                 <div class="bg-block d-none d-md-block"></div>
