--- a/src/faq.njk
+++ b/src/faq.njk
@@ -20,8 +20,7 @@
         <div>
             <a href="" class="btn btn-dark w-50 hero-btn">
                 <span class="me-2 px-1">Let Us Know If You Have Questions</span>
-                <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
-                    alt="">
+                <img src="ihttps://forms.gle/3W1Bu7fW2nFWr1UJA" alt="">
             </a>
         </div>
     </div>
@@ -494,7 +493,7 @@
             Schedule a meeting with our Team to discuss how Mojo CFO can support your business financial
             growth and stability.
         </p>
-        <a href="https://forms.gle/HW7q5Bn8mr4QP6s3A" target="_blank" class="btn btn-primary btn-lg cta-btn">
+        <a href="https://forms.gle/3W1Bu7fW2nFWr1UJA" target="_blank" class="btn btn-primary btn-lg cta-btn">
             Let's Have a Conversation
             <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
                 class="ps-2">
