--- a/src/pricing.njk
+++ b/src/pricing.njk
@@ -20,7 +20,8 @@
                     investing in an advisor that creates the evolving finance strategy to help you
                     build your own American dream.
                 </p>
-                <a href="#" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-75" style="font-size:1.25rem;">
+                <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-75"
+                    style="font-size:1.25rem;">
                     SCHEDULE A FREE CONSULTATION
                     <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
                         class="ps-2">
@@ -154,7 +155,8 @@
                             </span>
                         </li>
                     </ul>
-                    <a href="#" class="btn price-btn text-light w-100 mt-auto">Choose Essential</a>
+                    <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn price-btn text-light w-100 mt-auto">Choose
+                        Essential</a>
                 </div>
             </div>
 
@@ -215,7 +217,8 @@
                             </span>
                         </li>
                     </ul>
-                    <a href="#" class="btn btn-light text-dark w-100 mt-auto">Choose Pro</a>
+                    <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-light text-dark w-100 mt-auto">Choose
+                        Pro</a>
                 </div>
             </div>
 
@@ -282,7 +285,8 @@
                             </span>
                         </li>
                     </ul>
-                    <a href="#" class="btn price-btn text-light w-100 mt-auto">Choose Premium</a>
+                    <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn price-btn text-light w-100 mt-auto">Choose
+                        Premium</a>
                 </div>
             </div>
 
@@ -347,7 +351,8 @@
                             </span>
                         </li>
                     </ul>
-                    <a href="#" class="btn price-btn text-light w-100 mt-auto">Choose Enterprise</a>
+                    <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn price-btn text-light w-100 mt-auto">Choose
+                        Enterprise</a>
                 </div>
             </div>
 
@@ -446,7 +451,7 @@
                     Are you ready to elevate your business' financial health and drive sustainable growth?
                     Book a call today to dive into the details.
                 </h2>
-                <a href="https://forms.gle/HW7q5Bn8mr4QP6s3A" target="_blank" class="btn btn-primary btn-lg cta-btn">
+                <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" target="_blank" class="btn btn-primary btn-lg cta-btn">
                     Let's Have a Conversation
                     <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
                         class="ps-2">
