--- a/src/index.njk
+++ b/src/index.njk
@@ -21,7 +21,8 @@
                     margins and poor cash flow?<br><br>
                     We fix that.
                 </p>
-                <a href="#" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-75" style="font-size:1.25rem;">
+                <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-75"
+                    style="font-size:1.25rem;">
                     SCHEDULE A FREE CONSULTATION
                     <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
                         class="ps-2">
@@ -71,7 +72,8 @@
                     We’ve done it all with a focus on serving clients across a number of industries.
                 </p>
                 <p class="mb-4">How would you like us to help you?</p>
-                <a href="/contact" class="learn-more text-decoration-none fw-bold">Learn More</a>
+                <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="learn-more text-decoration-none fw-bold">Learn
+                    More</a>
             </div>
             <div class="col-md-6 order-1 order-md-2 position-relative mb-4 mb-md-0">
                 <div class="bg-block d-none d-md-block"></div>
@@ -110,7 +112,7 @@
                     integrating expert analysis with user-friendly reporting tools, we enable your
                     leadership to make confident, data-driven decisions.
                 </p>
-                <a href="/contact" class="btn btn-dark biz-btn">
+                <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark biz-btn">
                     Learn more
                 </a>
             </div>
@@ -209,7 +211,7 @@
             Schedule a meeting with our Team to discuss how Mojo CFO can support your business’ financial
             growth and stability.
         </p>
-        <a href="/contact" target="_blank" class="btn btn-primary btn-lg cta-btn">
+        <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" target="_blank" class="btn btn-primary btn-lg cta-btn">
             Let's Have a Conversation
             <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
                 class="ps-2">
